# leaptalk-origin

./: .gitignore  README.md  TODO.md
backend/: .env.example  .gitignore  README.md  main.py  migrate.py  pyproject.toml  requirements.txt
backend/apis/v1/: analyzer.py  auth.py  chat.py  situation.py
backend/core/: config.py  database.py  level.json  level.py  situation.py
backend/models/: __init__.py  model.py
backend/prompts/: analyzer.py  chat.py  situation.py
backend/sandbox/: try-uuid-utils.py
backend/schemas/: analyzer.py  chat.py  common.py
backend/services/: dashscope_audio.py  dashscope_tts.py  docx_generate.py  global_analyzer.py  openai_audio.py  openai_chat.py  xunfei_ise.py
backend/test/: chat_audio.py  output_chat.py
frontend/: .env.production  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  config.js  index.css
frontend/src/apis/: analyzer.js  auth.js  chat.js  situation.js
frontend/src/components/Chat/: ChatInfoPanel.jsx  ChatView.css  ChatView.jsx  MessageCard.css  MessageCard.jsx  MessageInput.css  MessageInput.jsx  TranslationPopup.jsx  VoiceView.css  VoiceView.jsx
frontend/src/components/Common/: AppHeader.css  AppHeader.jsx  ErrorBoundary.jsx  LevelSelectModal.jsx
frontend/src/components/Summary/: MessageShow.jsx  SummaryInfoPanel.jsx  SummaryShow.jsx
frontend/src/pages/: ChatPage.jsx  Common.css  HomePage.jsx  ScenarioSelPage.jsx  SummaryPage.jsx
