[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "dashscope>=1.25.21",
    "fastapi>=0.137.1",
    "numpy>=2.4.6",
    "openai>=2.41.1",
    "psycopg2-binary>=2.9.10",
    "pyaudio>=0.2.14",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pydub>=0.25.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "uuid-utils>=0.16.1",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
    "xmltodict>=1.0.4",
]
